--- a/Ex_Ordinario_DCP/Info.plist
+++ b/Ex_Ordinario_DCP/Info.plist
@@ -34,6 +34,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Mensaje 1</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Mensaje 2</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Mensaje 3</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
